[tool.poetry]
name = "nbapy"
version = "1.1.8"
description = "Python client for NBA statistics from nba.com"
license = "BSD-3-Clause"
authors = ["Jacob Pavlock <jtpavlock@gmail.com>", "Eli Uriegas"]
maintainers = ["Jacob Pavlock"]
readme = "README.md"
repository = "https://github.com/jtpavlock/nbapy"
keywords = ["nba", "stats"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
requests = "*"
requests_cache = "*"

[tool.poetry.dev-dependencies]
commitizen = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
requests_cache  = "*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.8"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"
