[tool.poetry]
name = "nbapy"
version = "1.1.9"
description = "Python client for NBA statistics from nba.com"
license = "BSD-3-Clause"
authors = ["Jacob Pavlock <jtpavlock@gmail.com>", "Eli Uriegas"]
maintainers = ["Jacob Pavlock"]
readme = "README.md"
repository = "https://github.com/jtpavlock/nbapy"
keywords = ["nba", "stats"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
requests = "*"
requests_cache = "*"

# necessary for extras
sphinx = {version = "^3", optional = true}

[tool.poetry.dev-dependencies]
# tests
pytest = "*"
pytest-cov = "*"

# lint
commitizen = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
isort = "^5"
mypy = "*"
pre-commit = "*"

# docs
sphinx = "^3"
sphinx_rtd_theme = "*"

# needed because readthedocs doesn't natively support poetry
# https://github.com/readthedocs/readthedocs.org/issues/4912
[tool.poetry.extras]
docs = ["sphinx"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.9"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
