[metadata]
description-file = README.md

[flake8]
ignore =
       E203,
       E266,
       E501,
       W503,
       D1,   # missing docstring
# up to 88 with use of bugbear
max-line-length = 80
docstring-convention=google
select = B,C,D,E,F,W,B9

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-requests_cache.*]
ignore_missing_imports = True

[mypy-pytest.*]
# shouldn't need with pytest v6.0
ignore_missing_imports = True
